prevent panes container from extending when tabs overflow

--- a/frontend/src/components/Editor.module.scss
+++ b/frontend/src/components/Editor.module.scss
@@ -28,12 +28,12 @@ $vscode-background-color: #181818;
     border-bottom: 1px solid $editor-border-color;
 
     .toolbarAndPanesContainer {
-      width: 100%;
+      flex: 1 1 0%;
+      min-width: 0;
       display: flex;
       flex-direction: column;
 
       .panesContainer {
-        width: 100%;
         height: 100%;
         display: flex;
       }
@@ -117,7 +117,8 @@ $vscode-background-color: #181818;
 .toolbar {
   height: 40px;
   display: flex;
-  overflow: auto;
+  overflow: scroll;
+  flex-shrink: 0;
   @include no-scroll-bar();
   border-bottom: $editor-border-size solid $editor-border-color;
 
